--- a/_sass/elements.scss
+++ b/_sass/elements.scss
@@ -55,7 +55,7 @@ hr {
 
 a {
   text-decoration: none;
-  color: #007eff;
+  color: #1e90ff;
 }
 
 .social-icon-text {
